# etl-pipeline-runner

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test.yml
src/etl_pipeline_runner/: pipeline.py  services.py
tests/: conftest.py  test_csv_system.py  test_csvhandler.py  test_data_extractor.py  test_kaggle_system.py  test_sqliteloader.py  test_system.py
