[project]
name = "etl-pipeline-runner"
version = "0.2.2"
description = "A package to run ETL Pipeline"
authors = [
    {name = "Md Badiuzzaman Pranto", email = "prantoamt@gmail.com"},
]
dependencies = [
    "attrs>=23.1.0",
    "greenlet>=3.0.1",
    "iniconfig>=2.0.0",
    "pandas>=2.1.3",
    "packaging>=23.2",
    "pluggy>=1.3.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3.post1",
    "six>=1.16.0",
    "SQLAlchemy>=2.0.23",
    "typing-extensions>=4.8.0",
    "opendatasets>=0.1.22",
    "tqdm>=4.66.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"